# outlook-app

./: .coverage  .gitignore  CLAUDE.md  PRD.md  README.md  main.py  outlook_app_validation_results.json  outlook_com_validation_results.json  prd-1.md  pyproject.toml  windows_test_001_outlook_connection.py  windows_test_002_adapter_interface.py  windows_test_003_email_address_fix.py  windows_test_004_final_fix.py  windows_test_005_real_smtp_extraction.py  windows_test_006_correct_sender_extraction.py  windows_test_007_resolve_exchange_addresses.py  windows_test_008_real_adapter.py  windows_test_009_exchange_resolution.py  windows_test_010_cli_integration.py  windows_test_011_environment_fix.py  windows_test_012_cli_real_adapter.py
plans/: handover.md  master-plan.md  milestone-001-enhanced-cli-parser.md  milestone-001-project-setup.md  milestone-002-email-models.md  milestone-003-outlook-adapter.md  milestone-003-relative-date-parsing.md  milestone-004-email-reading-service.md  milestone-004-folder-enumeration-service.md  milestone-005-windows-testing-checkpoint-1.md  milestone-005b-application-testing-checkpoint.md  milestone-005c-actual-windows-validation.md  milestone-006-email-filtering-service.md  milestone-007-pagination-logic.md  milestone-007-sorting-pagination-enhancements.md  milestone-009-read-command.md  milestone-010-windows-testing-checkpoint-2.md  milestone-011-enhanced-read-filtering.md  milestone-011-move-command-implementation.md  milestone-011a-refactor-shared-filtering.md  milestone-011b-comprehensive-integration-testing.md  (+10 more)
tests/: test_cli.py  (+30 more)
(+99 files in other folders)
