[project]
name = "outlook-app"
version = "0.1.0"
description = "Cross-platform Outlook CLI for email management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "typing-extensions>=4.14.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pydantic>=2.11.7",
    "email-validator>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
