[project]
name = "outlook-app"
version = "0.1.0"
description = "Cross-platform Outlook CLI for email management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "typing-extensions>=4.14.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pydantic>=2.11.7",
    "email-validator>=2.2.0",
    "colorama>=0.4.6",
    "psutil>=7.0.0",
]

[project.scripts]
outlook-cli = "outlook_cli.cli:main"
ocli = "outlook_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outlook_cli"]
